--- a/styles/buttonPurple.css
+++ b/styles/buttonPurple.css
@@ -1,28 +1,26 @@
-.button__orange {
-    background: #FF7143;
+
+
+.button__purple {
+    background: #5454D4;
     color: #FFF;
-    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 10px;
-    /* width: 180px; */
-    height: 50px;
+    border: none;
+    z-index: 1;
     width: calc(100px + 80 * (100vw / 1440));
     height: calc(30px + 20 * (100vh / 800));
-    /* font-size: 17px; */
     font-size: calc(10px + 7 * (100vw / 1440));
     transition: color .2s ease;
     font-weight: 500;
-    z-index: 1;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
 }
 
-
-
-.button__orange:hover {
-    background: #5454D4;
+.button__purple:hover {
+    background: #FF7143;
+    ;
     color: #000;
 }
 
-.button__orange:active {
+.button__purple:active {
     color: #FFF;
 }
