Added round button + updated image Hero 3D

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,3 +43,21 @@ img {
     object-position: center;
     object-fit: cover;
 }
+
+.arrow {
+    width: calc(20px+4*(100vw/1440));
+    height: calc(20px+4*(100vh/1440));
+}
+
+.image__arrow {
+    width: calc(20px+20*(100vw/1440));
+    height: calc(20px+20*(100vh/1440));
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    transition: transform .2s ease;
+}
+
+.image__arrow:hover {
+    transform: scale(1.3);
+}
