Added block with image-companies and second-block content

--- a/styles/mobileMain.css
+++ b/styles/mobileMain.css
@@ -1,11 +1,11 @@
 @media (max-width:800px) {
-
+.main {
+    display: grid;
+    justify-content: center;
+}
 .block__first {
     grid-template-columns: calc(300px + 160 * (100vw / 1440));
-    gap: 60px;
-    width: max-content;
-    margin-left: 0;
-    gap: 30px;
+    gap: 50px;
 }
 
 .article__first {
@@ -19,7 +19,7 @@
 }
 
 .first__image {
-margin-left: 20%;
+margin-left: 10%;
 display: flex;
 justify-content: center;
 align-items:center;
@@ -27,6 +27,33 @@ align-items:center;
 
 .button__round {
     display: none;
+}
+
+.companies {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap:30px;
+    margin-top: 0;
+    justify-content: center;
+    align-items:center;
+    background:rgb(212, 206, 206);
+    border-radius:5%;
+}
+
+.image__companies {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5%;
+}
+
+.block__second {
+    margin-top: 30px;
+    grid-template-columns: calc(300px + 160 * (100vw / 1440));
+    width: max-content;
+    margin-left: 0;
+    gap: 50px;
+    text-align: center;
 }
 
 }
