--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,15 @@
 .main {
     margin-top: 100px;
     font-family: 'DM Sans', sans-serif;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    padding-bottom: 5%;
 }
 
 .block__first {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    align-items:start;
-    margin-left: 10%;
+    align-items: start;
+    justify-items: center;
 }
 
 .first__block-bold {
@@ -27,7 +27,7 @@
 .position__types-block {
     display: flex;
     justify-content: start;
-    align-items:center;
+    align-items: center;
 }
 
 .first__block-middle {
@@ -37,11 +37,13 @@
 }
 
 img {
-    width:100%;
-    height:100%;
     overflow: hidden;
     object-position: center;
-    object-fit: cover;
+}
+
+.first__image {
+    width: 100%;
+    height: 100%;
 }
 
 .arrow {
@@ -54,10 +56,56 @@ img {
     height: calc(20px+20*(100vh/1440));
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     transition: transform .2s ease;
 }
 
 .image__arrow:hover {
     transform: scale(1.3);
+}
+
+.companies {
+    width: 100%;
+    margin-top: 110px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.block__second {
+    margin-top: 170px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.article__second {
+    width: calc(300px + 160 * (100vw / 1440));
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px;
+}
+
+.second__block-bold {
+    font-size: calc(20px + 40 * (100vw / 1440));
+    font-weight: 700;
+}
+
+.second__block-middle {
+    width: calc(300px + 160 * (100vw / 1440));
+    color: #696871;
+    font-size: calc(14px + 6 * (100vw / 1440));
+}
+
+.link__block-second {
+    text-decoration: none;
+    color: #5454D4;
+    font-size: calc(14px + 3 * (100vw/1440));
+    transition: color .2s ease;
+    font-weight: 500;
+}
+
+.link__block-second:hover {
+    color: #FF7143;
+
 }
