--- a/styles/mobileHeader.css
+++ b/styles/mobileHeader.css
@@ -8,7 +8,7 @@
         right: 0;
         top: 0;
         width: 100vw;
-        height: 350px;
+        height: calc(320px + 500*(100vh/3500));
         background: #000;
         display: block;
         padding-top: 100px;
@@ -52,5 +52,11 @@
 
     .header.open .up {
         transform: translateX(-100%);
+    }
+}
+
+@media (max-width:400px) {
+    .up {
+        height: 350px;
     }
 }
