Added third block

--- a/styles/main.css
+++ b/styles/main.css
@@ -71,7 +71,7 @@ img {
     justify-content: space-around;
 }
 
-.block__second {
+.block__second, .block__third {
     margin-top: 170px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -79,25 +79,34 @@ img {
     justify-items: center;
 }
 
-.article__second {
-    width: calc(300px + 160 * (100vw / 1440));
+.block__third {
+    margin-top: 80px;
+}
+
+.article__second, .article__third {
+    width: calc(400px + 160 * (100vw / 1440));
     display: grid;
     grid-template-columns: 1fr;
+    justify-items: start;
     gap: 30px;
 }
 
-.second__block-bold {
+.article__third {
+    margin-left: 10%;
+}
+
+.second__block-bold, .third__block-bold {
     font-size: calc(20px + 40 * (100vw / 1440));
     font-weight: 700;
 }
 
-.second__block-middle {
+.second__block-middle, .third__block-middle {
     width: calc(300px + 160 * (100vw / 1440));
     color: #696871;
     font-size: calc(14px + 6 * (100vw / 1440));
 }
 
-.link__block-second {
+.link__block-second, .link__block-third {
     text-decoration: none;
     color: #5454D4;
     font-size: calc(14px + 3 * (100vw/1440));
@@ -105,7 +114,7 @@ img {
     font-weight: 500;
 }
 
-.link__block-second:hover {
+.link__block-second:hover, .link__block-third:hover {
     color: #FF7143;
 
 }
