--- a/styles/mobileHeader.css
+++ b/styles/mobileHeader.css
@@ -7,7 +7,7 @@
         position: absolute;
         right: 0;
         top: 0;
-        width: 100vw;
+        width: 100%;
         height: calc(320px + 500*(100vh/3500));
         background: #000;
         display: block;
