--- a/styles/mobileMain.css
+++ b/styles/mobileMain.css
@@ -1,59 +1,75 @@
 @media (max-width:800px) {
-.main {
-    display: grid;
-    justify-content: center;
-}
-.block__first {
-    grid-template-columns: calc(300px + 160 * (100vw / 1440));
-    gap: 50px;
-}
+    .main {
+        display: grid;
+        justify-content: center;
+    }
 
-.article__first {
-    margin-left: 0;
-    text-align: center;
-    justify-content: center;
-}
+    .block__first {
+        grid-template-columns: calc(300px + 160 * (100vw / 1440));
+        gap: 50px;
+    }
 
-.position__types-block {
-    justify-content: center;
-}
+    .article__first {
+        margin-left: 0;
+        text-align: center;
+        justify-content: center;
+    }
 
-.first__image {
-margin-left: 10%;
-display: flex;
-justify-content: center;
-align-items:center;
-}
+    .position__types-block {
+        justify-content: center;
+    }
 
-.button__round {
-    display: none;
-}
+    .first__image {
+        margin-left: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-.companies {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap:30px;
-    margin-top: 0;
-    justify-content: center;
-    align-items:center;
-    background:rgb(212, 206, 206);
-    border-radius:5%;
-}
+    .button__round {
+        display: none;
+    }
 
-.image__companies {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5%;
-}
+    .companies {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 30px;
+        margin-top: 0;
+        justify-content: center;
+        align-items: center;
+        background: rgb(212, 206, 206);
+        border-radius: 5%;
+    }
 
-.block__second {
-    margin-top: 30px;
-    grid-template-columns: calc(300px + 160 * (100vw / 1440));
-    width: max-content;
-    margin-left: 0;
-    gap: 50px;
-    text-align: center;
-}
+    .image__companies {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5%;
+    }
+
+    .block__second,
+    .block__third {
+        margin-top: 30px;
+        grid-template-columns: calc(300px + 160 * (100vw / 1440));
+        width: max-content;
+        margin-left: 0;
+        gap: 50px;
+        text-align: center;
+        justify-items: center;
+    }
+
+    .article__second, .article__third {
+        justify-items: center;
+    }
+
+    .second__image {
+        transform: scale(0.8);
+    }
+
+    .third__image {
+        grid-row: 1;
+        transform: scale(0.8);
+    } 
 
 }
