--- a/styles/mobileMain.css
+++ b/styles/mobileMain.css
@@ -53,7 +53,7 @@
         grid-template-columns: calc(300px + 160 * (100vw / 1440));
         width: max-content;
         margin-left: 0;
-        gap: 50px;
+        gap: 30px;
         text-align: center;
         justify-items: center;
     }
@@ -63,17 +63,19 @@
         grid-template-columns: calc(300px + 160 * (100vw / 1440));
         width: max-content;
         margin-left: 0;
-        gap: 50px;
+        gap: 30px;
         text-align: center;
         justify-items: center;
     }
 
     .article__second {
         justify-items: center;
+        gap: 0;
     }
 
     .article__third {
         justify-items: center;
+        gap: 0;
     }
 
     .second__image {
