--- a/styles/zero.css
+++ b/styles/zero.css
@@ -2,4 +2,10 @@
     margin: 0;
     padding: 0;
     user-select: none;
+    box-sizing: border-box;
+}
+
+.container {
+    display: flex;
+    justify-items: center;
 }
