--- a/styles/mobileMain.css
+++ b/styles/mobileMain.css
@@ -1,3 +1,14 @@
+@media (max-width:1100px) {
+    .sixth__block {
+        justify-content: center;
+    }
+
+    .sixth__card {
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+}
+
 @media (max-width:800px) {
     .main {
         display: grid;
@@ -7,6 +18,7 @@
     .block__first {
         grid-template-columns: calc(300px + 160 * (100vw / 1440));
         gap: 50px;
+        justify-content: center;
     }
 
     .article__first {
@@ -87,7 +99,6 @@
     } 
 
     .block__fourth {
-        /* grid-template-columns: auto; */
         margin-top: 50px;
         border-radius:10px;
     }
@@ -109,11 +120,17 @@
         margin-top: 30px;
         text-align: center;
         display: grid;
-        justify-items: center;
+        justify-content: center;
         gap: 30px;
     }
 
     .fifth__block-text {
-        width:calc(300px + 80 *(100vw/1440));
+        width:100%
+    }
+
+    .sixth__block {
+        margin-top: 30px;
+        display: grid;
+        gap: 30px;
     }
 }
