--- a/styles/mobileHeader.css
+++ b/styles/mobileHeader.css
@@ -8,7 +8,7 @@
         right: 0;
         top: 0;
         width: 100%;
-        height: calc(320px + 500*(100vh/3500));
+        height: max-content;
         background: #000;
         display: block;
         padding-top: 100px;
